--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,23 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.perspective {
+  perspective: 1000px;
+}
+
+.transform-style-preserve-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotateY-0 {
+  transform: rotateY(0deg);
+}
+
+.rotateY-180 {
+  transform: rotateY(180deg);
+}
