--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,25 @@ button:focus-visible {
 .rotateY-180 {
   transform: rotateY(180deg);
 }
+
+
+@keyframes borderSpin {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
+
+.animate-border {
+  background-size: 200% 200%;
+  animation: borderSpin 4s linear infinite;
+}
+
+.xm{
+  @media (width <= 640px) {
+    margin-top:80px;
+    
+  }
+}
